--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Navbar</a>
   <a routerLink="/home">Home</a>
-  <a routerLink="/contact">Contact</a>
+  <a [routerLink]="['contact', 'name']">Contact</a>
   <a routerLink="/about">About</a>
 </nav>
 
