--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -4,3 +4,8 @@
 </p>
 
 <button type="button" (click)="goBack()"class="btn btn-primary">Primary</button>
+
+<button type="button" (click)="onClickCounter()"class="btn btn-primary">Increase</button>
+<div>
+  {{ counter.countNumber }}
+</div>
